--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,61 +1,61 @@
-name: main
+# name: main
 
-on: push
+# on: push
 
-jobs:
-  test:
-    name: Test
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python:
-          - version: "3.12"
-            toxenv: "py312"
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python.version }}
-      - name: Install tox
-        run: pip install tox
-      - name: Run tox test env
-        run: tox -r -e ${{ matrix.python.toxenv }}
+# jobs:
+#   test:
+#     name: Test
+#     runs-on: ubuntu-latest
+#     strategy:
+#       matrix:
+#         python:
+#           - version: "3.12"
+#             toxenv: "py312"
+#     steps:
+#       - uses: actions/checkout@v4
+#       - uses: actions/setup-python@v5
+#         with:
+#           python-version: ${{ matrix.python.version }}
+#       - name: Install tox
+#         run: pip install tox
+#       - name: Run tox test env
+#         run: tox -r -e ${{ matrix.python.toxenv }}
   
-  docs:
-    name: Docs
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-      - name: Install tox
-        run: pip install tox
-      - name: Rox tox evn to build docs
-        run: tox -r -e docs
+#   docs:
+#     name: Docs
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v4
+#       - uses: actions/setup-python@v5
+#         with:
+#           python-version: "3.10"
+#       - name: Install tox
+#         run: pip install tox
+#       - name: Rox tox evn to build docs
+#         run: tox -r -e docs
 
-  lint:
-    name: Lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-      - name: Install tox
-        run: pip install tox
-      - name: Run tox lint env
-        run: tox -r -e lint
+#   lint:
+#     name: Lint
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v4
+#       - uses: actions/setup-python@v5
+#         with:
+#           python-version: "3.10"
+#       - name: Install tox
+#         run: pip install tox
+#       - name: Run tox lint env
+#         run: tox -r -e lint
 
-  typecheck:
-    name: Typecheck
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-      - name: Install tox
-        run: pip install tox
-      - name: Run tox typecheck env
-        run: tox -r -e typecheck
+#   typecheck:
+#     name: Typecheck
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v4
+#       - uses: actions/setup-python@v5
+#         with:
+#           python-version: "3.10"
+#       - name: Install tox
+#         run: pip install tox
+#       - name: Run tox typecheck env
+#         run: tox -r -e typecheck
