--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,46 +1,46 @@
-name: Build and publish to PyPI
+# name: Build and publish to PyPI
 
-on: push
+# on: push
 
-jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-      - name: Install tox
-        run: pip install tox
-      - name: Run tox build env
-        run: tox -r -e build
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          path: dist/
+# jobs:
+#   build:
+#     name: Build
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v4
+#       - uses: actions/setup-python@v5
+#         with:
+#           python-version: "3.10"
+#       - name: Install tox
+#         run: pip install tox
+#       - name: Run tox build env
+#         run: tox -r -e build
+#       - name: Upload artifacts
+#         uses: actions/upload-artifact@v4
+#         with:
+#           path: dist/
 
-  publish:
-    name: Publish to PyPI
-    if: startsWith(github.ref, 'refs/tags/')
-    needs: build
-    runs-on: ubuntu-latest
-    environment: 
-      name: pypi
-      url: https://pypi.org/project/ScraperFC/
-    steps: 
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: artifact
-          path: dist/
-      - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
-          verbose: true
-          skip-existing: true
+#   publish:
+#     name: Publish to PyPI
+#     if: startsWith(github.ref, 'refs/tags/')
+#     needs: build
+#     runs-on: ubuntu-latest
+#     environment: 
+#       name: pypi
+#       url: https://pypi.org/project/ScraperFC/
+#     steps: 
+#       - name: Download artifacts
+#         uses: actions/download-artifact@v4
+#         with:
+#           name: artifact
+#           path: dist/
+#       - name: Publish to PyPI
+#         uses: pypa/gh-action-pypi-publish@release/v1
+#         with:
+#           user: __token__
+#           password: ${{ secrets.PYPI_API_TOKEN }}
+#           verbose: true
+#           skip-existing: true
       # - name: Publish to TestPyPI
       #   uses: pypa/gh-action-pypi-publish@release/v1
       #   with: 
